Name:          repo-create-cache-repo
Version:       0.1.0
Synopsis:      Creates a pacman (Arch Linux) repo of installed pkgs found in your pacman cache dir, and copies them to the repo
License:       BSD3
License-File:  LICENSE
Author:        StephenB
Maintainer:    mail4stb@gmail.com
Build-Type:    Simple
Cabal-Version: >=1.2

Source-Repository head
  Type:     git
  Location: git://github.com/stepb/repo-create-cache-repo.git

Executable repo-create-cache-repo
  Main-is:       RepoCreateCacheRepo.hs
  Build-Depends: base >=4.3, filepath, old-time, directory, containers >=0.4, HSH ==2.*
  ghc-options:   -Wall -O
